# lang-app

./: .cursorignore  .gitignore  README.md  TESTING.md  add-test-data.js  build-renderer.js  jest.config.js  package-lock.json  package.json  playwright.config.ts  test-direct-approach.sh  test-llm.js  test-no-json-format.sh  test-ollama-client.js  test-progress.js  test-prompts.sh  test-simple-prompt.sh  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
.kiro/steering/: product.md  structure.md  tech.md
audio/: .gitkeep
dicts/: indonesian_dict.jsonl
src/main/: main.ts
src/main/lemmatization/: README.md  index.ts  lemmatization-service.ts  pyproject.toml
src/preload/: preload.ts
src/renderer/: index.html
test-results/: .last-run.json
test-results/progress-page-Progress-Pag-a029a-data-after-learning-session-electron/: error-context.md
test-results/progress-page-Progress-Pag-f9005--database-errors-gracefully-electron/: error-context.md
tests/: setup.ts
tests/e2e/: README.md  data-persistence.spec.ts  database-sentence-mismatch.spec.ts  error-recovery.spec.ts  infrastructure-test.spec.ts  learning-workflow.spec.ts  llm-error-handling.spec.ts  new-word-only-test.spec.ts  progress-page.spec.ts  sentence-display-bug.spec.ts  session-complete-bug.spec.ts  simple-test.spec.ts  test-helpers.ts  word-selection-bug-fix.spec.ts  word-selection-flow.spec.ts  (+1 more)
tests/unit/: core-types.test.ts  (+8 more)
words/: indonesian_words.txt  italian_words.txt  polish_words.txt  portuguese_words.txt  spanish_words.txt
(+70 files in other folders)
